Use constant instead of magic string
Use org.apache.commons.lang.CharEncoding.UTF_8 as
encoding instead of "UTF-8" -string.